--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     },
     "require-dev": {
         "illuminate/container": "^5.0",
+        "illuminate/support": "^5.0",
         "phpunit/phpunit": "^4.8",
         "squizlabs/php_codesniffer": "^2.3"
     },
